--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Text Result App</title>
+  <title>AG AMD</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Enter Text Below</h1>
-    <textarea id="inputText" placeholder="Type something..."></textarea>
+    <h1>Introduceți codul</h1>
+    <input id="inputText" placeholder="Type something..."></input>
+    <button id="submitButton">Submit</button>
     <div id="result"></div>
   </div>
   
