Added questions and answers. Try 1.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Introduceți codul</h1>
-    <input id="inputText" placeholder="Type something..."></input>
-    <button id="submitButton">Submit</button>
+    <h1>Mesaj către Tudor</h1>
+    <input id="inputText" placeholder="Introduceți codul..."></input>
+    <button id="submitButton">Trimite</button>
     <div id="result"></div>
   </div>
   
