Added final stuff.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Mesaj către Tudor</h1>
-    <input id="inputText" placeholder="Introduceți codul..."></input>
+    <h1>Tudor de buzunar</h1>
+    <input id="inputText" placeholder="Scrie-mi ceva..."></input>
     <button id="submitButton">Trimite</button>
     <div id="result"></div>
   </div>
